@@ -24,7 +24,10 @@
 
   \item{method}{type of factor score estimation method. Can
   be expected a-posteriori (\code{"EAP"}), Bayes modal
-  (\code{"MAP"}), or maximum likelihood (\code{"ML"})}
+  (\code{"MAP"}), weighted likelihood estimation
+  (\code{"WLE"}), or maximum likelihood (\code{"ML"}). Note
+  that \code{'WLE'} is only available for unidimensional
+  models}
 
   \item{quadpts}{number of quadratures to use per
   dimension}
@@ -37,7 +40,7 @@
   \item{verbose}{logical; print verbose output messages?}
 }
 \description{
-  Computes MAP, EAP, or ML factor scores with a
+  Computes MAP, EAP, WLE, or ML factor scores with a
   multivariate normal prior distribution.
 }
 \examples{
